--- a/silly-story-generator-ja.html
+++ b/silly-story-generator-ja.html
@@ -44,14 +44,14 @@
     </div>
     <div>
       <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
-      <label for="日本">日本</label><input id="日本" type="radio" name="ukus" value="日本">
+      <label for="uk">UK</label><input id="uk" type="radio" name="ukus" value="uk">
     </div>
     <div>
       <button class="randomize">バカ話を表示</button>
     </div>
     <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
     <p class="story"></p>
-    <script src="main.js"></script>
+    <script src="main2.js"></script>
   </body>
 </html>
 
