--- a/silly-story-generator-ja.html
+++ b/silly-story-generator-ja.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width">
 
-    <title>Silly story generator</title>
+    <title>Silly story generator-japan</title>
 
     <style>
 
@@ -43,8 +43,8 @@
       <input id="customname" type="text" placeholder="">
     </div>
     <div>
-      <label for="us">US</label><input id="us" type="radio" name="ukus" value="us" checked>
-      <label for="日本">日本</label><input id="日本" type="radio" name="ukus" value="日本">
+      <label for="us">US</label><input id="us" type="radio" name="uk日本" value="us" checked>
+      <label for="日本">日本</label><input id="日本" type="radio" name="uk日本" value="日本">
     </div>
     <div>
       <button class="randomize">バカ話を表示</button>
